Closed Bug 1329365 Opened 9 years ago Closed 9 years ago

Also suppress XML parsing errors on empty 201, 202, and 205 responses for XMLHttpRequests.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: wisniewskit, Assigned: wisniewskit)

References

Details

Attachments

(1 file, 1 obsolete file)

As per bug 884693 comment 30, we might as well not show an XML parsing error when an XMLHttpRequest gets an empty body for HTTP response codes 201, 202, and 205 (this builds on the work from that same patch). Here's a patch which makes it so. Note that I had to move the test from OnStopRequest to OnStartRequest, where the error-suppression call is early enough to suppress all of the cases.
Attachment #8824613 - Flags: review?(bzbarsky)
Here's a link to a try run as well: https://treeherder.mozilla.org/#/jobs?repo=try&revision=4fc8f6b23e26a6bf1cac1cd19c3d0f19cba3ea8a (the oranges all seem unrelated).
Comment on attachment 8824613 [details] [diff] [review] add_201_202_and_205_to_codes_suppressing_xml_parser_errors.diff Why do you still need the code in OnStopRequest?
Flags: needinfo?(wisniewskit)
Hmm. I don't. I'm not sure how that made it into the final patch, actually. Here's a fresh patch without it.
Attachment #8824613 - Attachment is obsolete: true
Attachment #8824613 - Flags: review?(bzbarsky)
Flags: needinfo?(wisniewskit)
Attachment #8824636 - Flags: review?(bzbarsky)
Comment on attachment 8824636 [details] [diff] [review] 1329365-add_201_202_and_205_to_codes_suppressing_xml_parser_errors.diff r=me
Attachment #8824636 - Flags: review?(bzbarsky) → review+
Thanks! Requesting check-in.
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/8e417d4d1e1f Follow-up adding 201, 202, and 205 to the list of response codes which suppress XML parsing errors. r=bz
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: