Bug 1329365 - Follow-up adding 201, 202, and 205 to the list of response codes which suppress XML parsing errors. r=bz